[workspace]
resolver = "2"

members = [
    "api",
    "api/openapi-spec-generator",
    "api/test-context",
    "api/types",
    "aptos-move/aptos-abstract-gas-usage",
    "aptos-move/aptos-aggregator",
    "aptos-move/aptos-debugger",
    "aptos-move/aptos-e2e-comparison-testing",
    "aptos-move/aptos-gas-algebra",
    "aptos-move/aptos-gas-calibration",
    "aptos-move/aptos-gas-meter",
    "aptos-move/aptos-gas-profiling",
    "aptos-move/aptos-gas-schedule",
    "aptos-move/aptos-gas-schedule-updator",
    "aptos-move/aptos-memory-usage-tracker",
    "aptos-move/aptos-native-interface",
    "aptos-move/aptos-release-builder",
    "aptos-move/aptos-resource-viewer",
    "aptos-move/aptos-sdk-builder",
    "aptos-move/aptos-transaction-benchmarks",
    "aptos-move/aptos-transaction-simulation",
    "aptos-move/aptos-transactional-test-harness",
    "aptos-move/aptos-validator-interface",
    "aptos-move/aptos-vm",
    "aptos-move/aptos-vm-benchmarks",
    "aptos-move/aptos-vm-environment",
    "aptos-move/aptos-vm-logging",
    "aptos-move/aptos-vm-profiling",
    "aptos-move/aptos-vm-types",
    "aptos-move/aptos-workspace-server",
    "aptos-move/block-executor",
    "aptos-move/e2e-benchmark",
    "aptos-move/e2e-move-tests",
    "aptos-move/e2e-tests",
    "aptos-move/e2e-testsuite",
    "aptos-move/framework",
    "aptos-move/framework/cached-packages",
    "aptos-move/framework/table-natives",
    "aptos-move/move-examples",
    "aptos-move/mvhashmap",
    "aptos-move/package-builder",
    "aptos-move/replay-benchmark",
    "aptos-move/script-composer",
    "aptos-move/vm-genesis",
    "aptos-node",
    "config",
    "config/global-constants",
    "consensus",
    "consensus/consensus-types",
    "consensus/safety-rules",
    "crates/aptos",
    "crates/aptos-admin-service",
    "crates/aptos-api-tester",
    "crates/aptos-bcs-utils",
    "crates/aptos-bitvec",
    "crates/aptos-build-info",
    "crates/aptos-collections",
    "crates/aptos-compression",
    "crates/aptos-crypto",
    "crates/aptos-crypto-derive",
    "crates/aptos-debugger",
    "crates/aptos-dkg",
    "crates/aptos-drop-helper",
    "crates/aptos-enum-conversion-derive",
    "crates/aptos-faucet/cli",
    "crates/aptos-faucet/core",
    "crates/aptos-faucet/metrics-server",
    "crates/aptos-faucet/service",
    "crates/aptos-genesis",
    "crates/aptos-github-client",
    "crates/aptos-id-generator",
    "crates/aptos-infallible",
    "crates/aptos-inspection-service",
    "crates/aptos-jwk-consensus",
    "crates/aptos-keygen",
    "crates/aptos-ledger",
    "crates/aptos-localnet",
    "crates/aptos-log-derive",
    "crates/aptos-logger",
    "crates/aptos-metrics-core",
    "crates/aptos-network-checker",
    "crates/aptos-node-identity",
    "crates/aptos-openapi",
    "crates/aptos-profiler",
    "crates/aptos-proptest-helpers",
    "crates/aptos-push-metrics",
    "crates/aptos-rate-limiter",
    "crates/aptos-rest-client",
    "crates/aptos-retrier",
    "crates/aptos-rosetta",
    "crates/aptos-rosetta-cli",
    "crates/aptos-runtimes",
    "crates/aptos-speculative-state-helper",
    "crates/aptos-system-utils",
    "crates/aptos-telemetry",
    "crates/aptos-telemetry-service",
    "crates/aptos-temppath",
    "crates/aptos-time-service",
    "crates/aptos-warp-webserver",
    "crates/bounded-executor",
    "crates/channel",
    "crates/crash-handler",
    "crates/fallible",
    "crates/indexer",
    "crates/jwk-utils",
    "crates/node-resource-metrics",
    "crates/num-variants",
    "crates/proxy",
    "crates/reliable-broadcast",
    "crates/short-hex-str",
    "crates/transaction-emitter",
    "crates/transaction-emitter-lib",
    "crates/transaction-generator-lib",
    "crates/transaction-workloads-lib",
    "crates/validator-transaction-pool",
    "devtools/aptos-cargo-cli",
    "dkg",
    "ecosystem/indexer-grpc/indexer-grpc-cache-worker",
    "ecosystem/indexer-grpc/indexer-grpc-data-service",
    "ecosystem/indexer-grpc/indexer-grpc-data-service-v2",
    "ecosystem/indexer-grpc/indexer-grpc-file-checker",
    "ecosystem/indexer-grpc/indexer-grpc-file-store",
    "ecosystem/indexer-grpc/indexer-grpc-file-store-backfiller",
    "ecosystem/indexer-grpc/indexer-grpc-fullnode",
    "ecosystem/indexer-grpc/indexer-grpc-in-memory-cache-benchmark",
    "ecosystem/indexer-grpc/indexer-grpc-manager",
    "ecosystem/indexer-grpc/indexer-grpc-server-framework",
    "ecosystem/indexer-grpc/indexer-grpc-table-info",
    "ecosystem/indexer-grpc/indexer-grpc-utils",
    "ecosystem/indexer-grpc/indexer-test-transactions",
    "ecosystem/indexer-grpc/indexer-transaction-generator",
    "ecosystem/indexer-grpc/transaction-filter",
    "ecosystem/nft-metadata-crawler",
    "ecosystem/node-checker",
    "ecosystem/node-checker/fn-check-client",
    "execution/block-partitioner",
    "execution/executor",
    "execution/executor-benchmark",
    "execution/executor-service",
    "execution/executor-test-helpers",
    "execution/executor-types",
    "experimental/bulk-txn-submit",
    "experimental/execution/ptx-executor",
    "experimental/runtimes",
    "experimental/storage/hexy",
    "experimental/storage/layered-map",
    "keyless/pepper/common",
    "keyless/pepper/example-client-rust",
    "keyless/pepper/service",
    "mempool",
    "network/benchmark",
    "network/builder",
    "network/discovery",
    "network/framework",
    "network/memsocket",
    "network/netcore",
    "peer-monitoring-service/client",
    "peer-monitoring-service/server",
    "peer-monitoring-service/types",
    "protos/rust",
    "sdk",
    "secure/net",
    "secure/storage",
    "secure/storage/vault",
    "state-sync/aptos-data-client",
    "state-sync/data-streaming-service",
    "state-sync/inter-component/consensus-notifications",
    "state-sync/inter-component/event-notifications",
    "state-sync/inter-component/mempool-notifications",
    "state-sync/inter-component/storage-service-notifications",
    "state-sync/state-sync-driver",
    "state-sync/storage-service/client",
    "state-sync/storage-service/server",
    "state-sync/storage-service/types",
    "storage/accumulator",
    "storage/aptosdb",
    "storage/backup/backup-cli",
    "storage/backup/backup-service",
    "storage/db-tool",
    "storage/indexer",
    "storage/indexer_schemas",
    "storage/jellyfish-merkle",
    "storage/rocksdb-options",
    "storage/schemadb",
    "storage/scratchpad",
    "storage/storage-interface",
    "testsuite/forge",
    "testsuite/forge-cli",
    "testsuite/fuzzer",
    "testsuite/fuzzer/fuzz",
    "testsuite/generate-format",
    "testsuite/module-publish",
    "testsuite/smoke-test",
    "testsuite/testcases",
    "third_party/move/extensions/move-table-extension",
    "third_party/move/move-binary-format",
    "third_party/move/move-binary-format/serializer-tests",
    "third_party/move/move-borrow-graph",
    "third_party/move/move-bytecode-spec",
    "third_party/move/move-bytecode-verifier",
    "third_party/move/move-bytecode-verifier/bytecode-verifier-tests",
    "third_party/move/move-bytecode-verifier/fuzz",
    "third_party/move/move-bytecode-verifier/invalid-mutations",
    "third_party/move/move-bytecode-verifier/transactional-tests",
    "third_party/move/move-command-line-common",
    "third_party/move/move-compiler-v2",
    "third_party/move/move-compiler-v2/legacy-move-compiler",
    "third_party/move/move-compiler-v2/transactional-tests",
    "third_party/move/move-core/types",
    "third_party/move/move-examples",
    "third_party/move/move-ir-compiler",
    "third_party/move/move-ir-compiler/move-bytecode-source-map",
    "third_party/move/move-ir-compiler/move-ir-to-bytecode",
    "third_party/move/move-ir-compiler/move-ir-to-bytecode/syntax",
    "third_party/move/move-ir-compiler/transactional-tests",
    "third_party/move/move-ir/types",
    "third_party/move/move-model",
    "third_party/move/move-model/bytecode",
    "third_party/move/move-model/bytecode-test-utils",
    "third_party/move/move-model/bytecode/ast-generator-tests",
    "third_party/move/move-prover",
    "third_party/move/move-prover/boogie-backend",
    "third_party/move/move-prover/bytecode-pipeline",
    "third_party/move/move-prover/lab",
    "third_party/move/move-prover/move-abigen",
    "third_party/move/move-prover/move-docgen",
    "third_party/move/move-prover/move-errmapgen",
    "third_party/move/move-prover/test-utils",
    "third_party/move/move-symbol-pool",
    "third_party/move/move-vm/integration-tests",
    "third_party/move/move-vm/metrics",
    "third_party/move/move-vm/paranoid-tests",
    "third_party/move/move-vm/runtime",
    "third_party/move/move-vm/test-utils",
    "third_party/move/move-vm/transactional-tests",
    "third_party/move/move-vm/types",
    "third_party/move/testing-infra/transactional-test-runner",
    "third_party/move/tools/move-bytecode-utils",
    "third_party/move/tools/move-bytecode-viewer",
    "third_party/move/tools/move-cli",
    "third_party/move/tools/move-coverage",
    "third_party/move/tools/move-decompiler",
    "third_party/move/tools/move-disassembler",
    "third_party/move/tools/move-linter",
    "third_party/move/tools/move-package",
    "third_party/move/tools/move-resource-viewer",
    "third_party/move/tools/move-unit-test",
    "tools/calc-dep-sizes",
    "tools/compute-module-expansion-size",
    "types",
    "vm-validator",
]

# NOTE: default-members is the complete list of binaries that form the "production Aptos codebase". These members should
# never include crates that require fuzzing features or test features. These are the crates we want built with no extra
# test-only code included.
#
# For more, see the "Conditional compilation for tests" section in documentation/coding_guidelines.md.
default-members = [
    "aptos-node",
    "consensus/safety-rules",
    "crates/aptos",
    "crates/aptos-debugger",
    "crates/aptos-faucet/service",
    "crates/aptos-keygen",
    "crates/aptos-rate-limiter",
    "crates/aptos-rosetta",
    "crates/transaction-emitter",
    "aptos-move/framework",
    "storage/backup/backup-cli",
    "ecosystem/node-checker",
]

# All workspace members should inherit these keys
# for package declarations.
[workspace.package]
authors = ["Aptos Labs <opensource@aptoslabs.com>"]
edition = "2021"
homepage = "https://aptoslabs.com"
license = "Apache-2.0"
publish = false
repository = "https://github.com/aptos-labs/aptos-core"
rust-version = "1.78.0"

[workspace.dependencies]
# Internal crate dependencies.
# Please do not add any test features here: they should be declared by the individual crate.
aptos = { path = "crates/aptos" }
aptos-accumulator = { path = "storage/accumulator" }
aptos-admin-service = { path = "crates/aptos-admin-service" }
aptos-aggregator = { path = "aptos-move/aptos-aggregator" }
aptos-api = { path = "api" }
aptos-api-test-context = { path = "api/test-context" }
aptos-api-types = { path = "api/types" }
aptos-backup-cli = { path = "storage/backup/backup-cli" }
aptos-backup-service = { path = "storage/backup/backup-service" }
aptos-bcs-utils = { path = "crates/aptos-bcs-utils" }
aptos-bounded-executor = { path = "crates/bounded-executor" }
aptos-block-executor = { path = "aptos-move/block-executor" }
aptos-bitvec = { path = "crates/aptos-bitvec" }
aptos-build-info = { path = "crates/aptos-build-info" }
aptos-cached-packages = { path = "aptos-move/framework/cached-packages" }
aptos-channels = { path = "crates/channel" }
aptos-cli-common = { path = "crates/aptos-cli-common" }
aptos-collections = { path = "crates/aptos-collections" }
aptos-compression = { path = "crates/aptos-compression" }
aptos-consensus = { path = "consensus" }
aptos-consensus-notifications = { path = "state-sync/inter-component/consensus-notifications" }
aptos-consensus-types = { path = "consensus/consensus-types" }
aptos-config = { path = "config" }
aptos-crash-handler = { path = "crates/crash-handler" }
aptos-crypto = { path = "crates/aptos-crypto" }
aptos-crypto-derive = { path = "crates/aptos-crypto-derive" }
aptos-data-client = { path = "state-sync/aptos-data-client" }
aptos-data-streaming-service = { path = "state-sync/data-streaming-service" }
aptos-db = { path = "storage/aptosdb" }
aptos-db-indexer = { path = "storage/indexer" }
aptos-db-indexer-schemas = { path = "storage/indexer_schemas" }
aptos-db-tool = { path = "storage/db-tool" }
aptos-debugger = { path = "crates/aptos-debugger" }
aptos-dkg = { path = "crates/aptos-dkg" }
aptos-dkg-runtime = { path = "dkg" }
aptos-drop-helper = { path = "crates/aptos-drop-helper" }
aptos-event-notifications = { path = "state-sync/inter-component/event-notifications" }
aptos-executor = { path = "execution/executor" }
aptos-block-partitioner = { path = "execution/block-partitioner" }
aptos-enum-conversion-derive = { path = "crates/aptos-enum-conversion-derive" }
aptos-executor-service = { path = "execution/executor-service" }
aptos-executor-test-helpers = { path = "execution/executor-test-helpers" }
aptos-executor-types = { path = "execution/executor-types" }
aptos-experimental-hexy = { path = "experimental/storage/hexy" }
aptos-experimental-bulk-txn-submit = { path = "experimental/bulk-txn-submit" }
aptos-experimental-layered-map = { path = "experimental/storage/layered-map" }
aptos-experimental-ptx-executor = { path = "experimental/execution/ptx-executor" }
aptos-experimental-runtimes = { path = "experimental/runtimes" }
aptos-faucet-cli = { path = "crates/aptos-faucet/cli" }
aptos-faucet-core = { path = "crates/aptos-faucet/core" }
aptos-faucet-service = { path = "crates/aptos-faucet/service" }
aptos-faucet-metrics-server = { path = "crates/aptos-faucet/metrics-server" }
aptos-fallible = { path = "crates/fallible" }
aptos-forge = { path = "testsuite/forge" }
aptos-framework = { path = "aptos-move/framework" }
fuzzer = { path = "testsuite/fuzzer" }
aptos-abstract-gas-usage = { path = "aptos-move/aptos-abstract-gas-usage" }
aptos-gas-meter = { path = "aptos-move/aptos-gas-meter" }
aptos-gas-algebra = { path = "aptos-move/aptos-gas-algebra" }
aptos-gas-calibration = { path = "aptos-move/aptos-gas-calibration" }
aptos-gas-profiling = { path = "aptos-move/aptos-gas-profiling" }
aptos-gas-schedule = { path = "aptos-move/aptos-gas-schedule" }
aptos-gas-schedule-updator = { path = "aptos-move/aptos-gas-schedule-updator" }
aptos-genesis = { path = "crates/aptos-genesis" }
aptos-github-client = { path = "crates/aptos-github-client" }
aptos-global-constants = { path = "config/global-constants" }
aptos-id-generator = { path = "crates/aptos-id-generator" }
aptos-indexer = { path = "crates/indexer" }
aptos-indexer-grpc-cache-worker = { path = "ecosystem/indexer-grpc/indexer-grpc-cache-worker" }
aptos-indexer-grpc-data-service = { path = "ecosystem/indexer-grpc/indexer-grpc-data-service" }
aptos-indexer-grpc-data-service-v2 = { path = "ecosystem/indexer-grpc/indexer-grpc-data-service-v2" }
aptos-indexer-grpc-file-store = { path = "ecosystem/indexer-grpc/indexer-grpc-file-store" }
aptos-indexer-grpc-file-checker = { path = "ecosystem/indexer-grpc/indexer-grpc-file-checker" }
aptos-indexer-grpc-file-store-backfiller = { path = "ecosystem/indexer-grpc/indexer-grpc-file-store-backfiller" }
aptos-indexer-grpc-fullnode = { path = "ecosystem/indexer-grpc/indexer-grpc-fullnode" }
aptos-indexer-grpc-in-memory-cache-benchmark = { path = "ecosystem/indexer-grpc/indexer-grpc-in-memory-cache-benchmark" }
aptos-indexer-grpc-manager = { path = "ecosystem/indexer-grpc/indexer-grpc-manager" }
aptos-indexer-grpc-table-info = { path = "ecosystem/indexer-grpc/indexer-grpc-table-info" }
aptos-indexer-test-transactions = { path = "ecosystem/indexer-grpc/indexer-test-transactions" }
aptos-indexer-grpc-utils = { path = "ecosystem/indexer-grpc/indexer-grpc-utils" }
aptos-indexer-grpc-server-framework = { path = "ecosystem/indexer-grpc/indexer-grpc-server-framework" }
aptos-indexer-transaction-generator = { path = "ecosystem/indexer-grpc/indexer-transaction-generator" }
aptos-infallible = { path = "crates/aptos-infallible" }
aptos-inspection-service = { path = "crates/aptos-inspection-service" }
aptos-jellyfish-merkle = { path = "storage/jellyfish-merkle" }
aptos-jwk-consensus = { path = "crates/aptos-jwk-consensus" }
aptos-jwk-utils = { path = "crates/jwk-utils" }
aptos-keygen = { path = "crates/aptos-keygen" }
aptos-language-e2e-tests = { path = "aptos-move/e2e-tests" }
aptos-ledger = { path = "crates/aptos-ledger" }
aptos-localnet = { path = "crates/aptos-localnet" }
aptos-log-derive = { path = "crates/aptos-log-derive" }
aptos-logger = { path = "crates/aptos-logger" }
aptos-memory-usage-tracker = { path = "aptos-move/aptos-memory-usage-tracker" }
aptos-mempool = { path = "mempool" }
aptos-mempool-notifications = { path = "state-sync/inter-component/mempool-notifications" }
aptos-memsocket = { path = "network/memsocket" }
aptos-metrics-core = { path = "crates/aptos-metrics-core" }
aptos-move-debugger = { path = "aptos-move/aptos-debugger" }
aptos-move-examples = { path = "aptos-move/move-examples" }
aptos-move-e2e-benchmark = { path = "aptos-move/e2e-benchmark" }
aptos-mvhashmap = { path = "aptos-move/mvhashmap" }
aptos-native-interface = { path = "aptos-move/aptos-native-interface" }
aptos-netcore = { path = "network/netcore" }
aptos-network = { path = "network/framework" }
aptos-network-benchmark = { path = "network/benchmark" }
aptos-network-builder = { path = "network/builder" }
aptos-network-checker = { path = "crates/aptos-network-checker" }
aptos-network-discovery = { path = "network/discovery" }
aptos-nft-metadata-crawler = { path = "ecosystem/nft-metadata-crawler" }
aptos-node = { path = "aptos-node" }
aptos-node-checker = { path = "ecosystem/node-checker" }
aptos-node-identity = { path = "crates/aptos-node-identity" }
aptos-node-resource-metrics = { path = "crates/node-resource-metrics" }
aptos-num-variants = { path = "crates/num-variants" }
aptos-openapi = { path = "crates/aptos-openapi" }
aptos-package-builder = { path = "aptos-move/package-builder" }
aptos-peer-monitoring-service-client = { path = "peer-monitoring-service/client" }
aptos-peer-monitoring-service-server = { path = "peer-monitoring-service/server" }
aptos-peer-monitoring-service-types = { path = "peer-monitoring-service/types" }
aptos-keyless-common = { path = "keyless/common" }
aptos-keyless-pepper-common = { path = "keyless/pepper/common" }
aptos-keyless-pepper-service = { path = "keyless/pepper/service" }
aptos-profiler = { path = "crates/aptos-profiler" }
aptos-proptest-helpers = { path = "crates/aptos-proptest-helpers" }
aptos-protos = { path = "protos/rust" }
aptos-proxy = { path = "crates/proxy" }
aptos-push-metrics = { path = "crates/aptos-push-metrics" }
aptos-rate-limiter = { path = "crates/aptos-rate-limiter" }
aptos-release-builder = { path = "aptos-move/aptos-release-builder" }
aptos-reliable-broadcast = { path = "crates/reliable-broadcast" }
aptos-replay-benchmark = { path = "aptos-move/replay-benchmark" }
aptos-resource-viewer = { path = "aptos-move/aptos-resource-viewer" }
aptos-rest-client = { path = "crates/aptos-rest-client" }
aptos-retrier = { path = "crates/aptos-retrier" }
aptos-rocksdb-options = { path = "storage/rocksdb-options" }
aptos-rosetta = { path = "crates/aptos-rosetta" }
aptos-runtimes = { path = "crates/aptos-runtimes" }
aptos-safety-rules = { path = "consensus/safety-rules" }
aptos-schemadb = { path = "storage/schemadb" }
aptos-scratchpad = { path = "storage/scratchpad" }
aptos-script-composer = { path = "aptos-move/script-composer" }
aptos-sdk = { path = "sdk" }
aptos-sdk-builder = { path = "aptos-move/aptos-sdk-builder" }
aptos-secure-net = { path = "secure/net" }
aptos-secure-storage = { path = "secure/storage" }
aptos-short-hex-str = { path = "crates/short-hex-str" }
aptos-speculative-state-helper = { path = "crates/aptos-speculative-state-helper" }
aptos-state-sync-driver = { path = "state-sync/state-sync-driver" }
aptos-storage-interface = { path = "storage/storage-interface" }
aptos-storage-service-client = { path = "state-sync/storage-service/client" }
aptos-storage-service-notifications = { path = "state-sync/inter-component/storage-service-notifications" }
aptos-storage-service-types = { path = "state-sync/storage-service/types" }
aptos-storage-service-server = { path = "state-sync/storage-service/server" }
aptos-system-utils = { path = "crates/aptos-system-utils" }
aptos-transaction-filter = { path = "ecosystem/indexer-grpc/transaction-filter" }
aptos-telemetry = { path = "crates/aptos-telemetry" }
aptos-telemetry-service = { path = "crates/aptos-telemetry-service" }
aptos-temppath = { path = "crates/aptos-temppath" }
aptos-testcases = { path = "testsuite/testcases" }
aptos-time-service = { path = "crates/aptos-time-service", features = [
    "async",
] }
aptos-transaction-emitter-lib = { path = "crates/transaction-emitter-lib" }
aptos-transaction-generator-lib = { path = "crates/transaction-generator-lib" }
aptos-transaction-workloads-lib = { path = "crates/transaction-workloads-lib" }
aptos-transaction-simulation = { path = "aptos-move/aptos-transaction-simulation" }
aptos-transactional-test-harness = { path = "aptos-move/aptos-transactional-test-harness" }
aptos-types = { path = "types" }
aptos-validator-interface = { path = "aptos-move/aptos-validator-interface" }
aptos-validator-transaction-pool = { path = "crates/validator-transaction-pool" }
aptos-vault-client = { path = "secure/storage/vault" }
aptos-vm = { path = "aptos-move/aptos-vm" }
aptos-vm-environment = { path = "aptos-move/aptos-vm-environment" }
aptos-vm-logging = { path = "aptos-move/aptos-vm-logging" }
aptos-vm-genesis = { path = "aptos-move/vm-genesis" }
aptos-vm-types = { path = "aptos-move/aptos-vm-types" }
aptos-vm-validator = { path = "vm-validator" }
aptos-workspace-server = { path = "aptos-move/aptos-workspace-server" }
aptos-warp-webserver = { path = "crates/aptos-warp-webserver" }
aptos-cargo-cli = { path = "devtools/aptos-cargo-cli" }

# External crate dependencies.
# Please do not add any test features here: they should be declared by the individual crate.
aes-gcm = "0.10.3"
ahash = { version = "0.8.11", features = ["serde"] }
atty = "0.2.14"
nalgebra = "0.32"
float-cmp = "0.9.0"
again = "0.1.2"
ambassador = "0.4.1"
anyhow = "1.0.71"
anstyle = "1.0.1"
arbitrary = { version = "1.3.2", features = ["derive"] }
arc-swap = "1.6.0"
arr_macro = "0.2.1"
ark-bls12-381 = "0.4.0"
ark-bn254 = "0.4.0"
ark-ec = "0.4.0"
ark-ff = "0.4.0"
ark-groth16 = "0.4.0"
ark-relations = "0.4.0"
ark-serialize = "0.4.0"
ark-std = { version = "0.4.0", features = ["getrandom"] }
aptos-indexer-processor-sdk = { git = "https://github.com/aptos-labs/aptos-indexer-processor-sdk.git", rev = "e38aba1bea9d78cfaec82e4c325e7751b6ebdf00", features = [
    "postgres_partial",
] }
aptos-moving-average = { git = "https://github.com/aptos-labs/aptos-indexer-processors.git", rev = "bf4dd89677e6929ef21f898a7a4176514e606ebd" }
assert_approx_eq = "1.1.0"
async-channel = "1.7.1"
async-mutex = "1.4.0"
async-recursion = "1.0.5"
async-trait = "0.1.53"
axum = "0.7.5"
base64 = "0.13.0"
backoff = { version = "0.4.0", features = ["tokio"] }
backtrace = "0.3.58"
bcs = { git = "https://github.com/aptos-labs/bcs.git", rev = "d31fab9d81748e2594be5cd5cdf845786a30562d" }
better_any = "0.1.1"
bigdecimal = { version = "0.4.0", features = ["serde"] }
version-compare = "0.1.1"
bitvec = "1.0.1"
blake2 = "0.10.4"
blake2-rfc = "0.2.18"
blst = "0.3.11"
# The __private_bench feature exposes the Fp12 type which we need to implement a multi-threaded multi-pairing.
blstrs = { version = "0.7.1", features = ["serde", "__private_bench"] }
bollard = "0.15"
build_html = "2.5.0"
bulletproofs = { version = "4.0.0" }
byteorder = "1.4.3"
bytes = { version = "1.4.0", features = ["serde"] }
bytesize = { version = "1.3.0" }
camino = { version = "1.1.6" }
chrono = { version = "0.4.19", features = ["clock", "serde"] }
chrono-tz = "0.10.1"
cfg-if = "1.0.0"
ciborium = "0.2"
claims = "0.7"
clap = { version = "4.3.9", features = [
    "derive",
    "env",
    "unstable-styles",
    "wrap_help",
] }
clap-verbosity-flag = "2.1.1"
clap_complete = "4.4.1"
cloud-storage = { version = "0.11.1", features = [
    "global-client",
    "rustls-tls",
], default-features = false }
codespan = "0.11.1"
codespan-reporting = "0.11.1"
colored = "2.0.0"
concurrent-queue = "2.2.0"
console-subscriber = "0.3.0"
core_affinity = "0.8.1"
coset = "0.3"
criterion = "0.3.5"
criterion-cpu-time = "0.1.0"
crossbeam = "0.8.1"
crossbeam-channel = "0.5.4"
crossterm = "0.26.1"
csv = "1.2.1"
curve25519-dalek = "3"
curve25519-dalek-ng = "4"
dashmap = { version = "5.5.3", features = ["inline"] }
datatest-stable = "0.1.1"
debug-ignore = { version = "1.0.3", features = ["serde"] }
derivative = "2.2.0"
derivation-path = "0.2.0"
derive_builder = "0.20.0"
determinator = "0.12.0"
derive_more = "0.99.11"
diesel = { version = "2.2.0", features = ["uuid"] }
# Use the crate version once this feature gets released on crates.io:
# https://github.com/weiznich/diesel_async/commit/e165e8c96a6c540ebde2d6d7c52df5c5620a4bf1
diesel-async = { git = "https://github.com/weiznich/diesel_async.git", rev = "e3beac66cd41ab53d78a10328bb72f272103e5d1", features = [
    "async-connection-wrapper",
    "postgres",
    "bb8",
    "tokio",
] }
diesel_migrations = { version = "2.1.0", features = ["postgres"] }
difference = "2.0.0"
digest = "0.9.0"
dir-diff = "0.3.2"
dirs = "5.0.1"
dirs-next = "2.0.0"
dunce = "1.0.4"
ed25519-dalek = { version = "1.0.1", features = ["std", "serde"] }
ed25519-dalek-bip32 = "0.2.0"
either = "1.6.1"
enum_dispatch = "0.3.12"
env_logger = "0.10.0"
erased-serde = "0.3.13"
ethnum = "1.5.0"
dearbitrary = { version = "1.0.4", features = ["derive"] }
fail = "0.5.0"
ff = { version = "0.13", features = ["derive"] }
field_count = "0.1.1"
figment = { version = "0.10.19", features = ["yaml", "env"] }
file_diff = "1.0.0"
firebase-token = { git = "https://github.com/aptos-labs/firebase-token", rev = "34ea512d3d1fad6c11df3e7d82ff72beccc05836" }
firestore = "0.43.0"
fixed = "1.25.1"
flate2 = "1.0.24"
flexi_logger = "0.27.4"
futures = "0.3.29"
futures-channel = "0.3.29"
futures-core = "0.3.29"
futures-util = "0.3.29"
fxhash = "0.2.1"
getrandom = "0.2.2"
gcp-bigquery-client = "0.16.8"
get_if_addrs = "0.5.3"
git2 = "0.16.1"
glob = "0.3.0"
goldenfile = "1.5.2"
google-cloud-storage = "0.13.0"
group = "0.13"
guppy = "0.17.5"
handlebars = "4.2.2"
hashbrown = "0.14.3"
heck = "0.4.1"
hex = { version = "0.4.3", features = ["serde"] }
hex-literal = "0.3.4"
hkdf = "0.10.0"
hmac = "0.12.0"
hostname = "0.3.1"
http = "0.2.9"
httpmock = "0.6.8"
hyper = { version = "0.14.18", features = ["full"] }
im = "15.0.0"
image = "0.24.5"
indexmap = "2.7.0"
indicatif = "0.15.0"
indoc = "1.0.6"
inferno = "0.11.14"
internment = { version = "0.5.0", features = ["arc"] }
ipnet = "2.5.0"
itertools = "0.13"
jemallocator = { version = "0.5.0", features = [
    "profiling",
    "unprefixed_malloc_on_supported_platforms",
] }
jemalloc-sys = "0.5.4"
json-patch = "0.2.6"
jsonwebtoken = "8.1"
jwt = "0.16.0"
kanal = "=0.1.0-pre8"
lazy_static = "1.4.0"
libc = "0.2.147"
libfuzzer-sys = "0.4.6"
libsecp256k1 = "0.7.0"
libtest-mimic = "0.5.2"
log = "0.4.17"
lru = "0.7.5"
lz4 = "1.28.0"
maplit = "1.0.2"
merlin = "3"
memchr = "2.7.4"
memory-stats = "1.0.0"
mime = "0.3.16"
mini-moka = { version = "0.10.3", features = ["sync"] }
mirai-annotations = "1.12.0"
mockall = "0.11.4"
more-asserts = "0.3.0"
named-lock = "0.2.0"
native-tls = "0.2.10"
neptune = { version = "13.0.0", default-features = false }
ntest = "0.9.3"
num = "0.4.0"
num-bigint = { version = "0.3.2", features = ["rand"] }
num_cpus = "1.13.1"
num-derive = "0.3.3"
num-integer = "0.1.42"
num-traits = "0.2.15"
once_cell = "1.10.0"
open = "5.3.1"
ordered-float = "3.9.1"
ouroboros = "0.15.6"
owo-colors = "3.5.0"
p256 = { version = "0.13.2" }
prettydiff = "0.6.2"
primitive-types = { version = "0.10" }
signature = "2.1.0"
pairing = "0.23"
parking_lot = "0.12.0"
paste = "1.0.7"
pathsearch = "0.2.0"
passkey-authenticator = { version = "0.2.0", features = ["testable"] }
passkey-client = { version = "0.2.0" }
passkey-types = { version = "0.2.0" }
pbjson = "0.5.1"
percent-encoding = "2.1.0"
petgraph = "0.6.5"
pin-project = "1.0.10"
plotters = { version = "0.3.5", default-features = false }
poem = { version = "3.1.3", features = ["anyhow", "compression", "rustls"] }
poem-openapi = { version = "5.1.2", features = ["swagger-ui", "url"] }
poem-openapi-derive = "5.1.1"
poseidon-ark = { git = "https://github.com/arnaucube/poseidon-ark.git", rev = "6d2487aa1308d9d3860a2b724c485d73095c1c68" }
pprof = { version = "0.11", features = ["flamegraph", "protobuf-codec"] }
pretty = "0.10.0"
pretty_assertions = "1.2.1"
# We set default-features to false so we don't onboard the libpq dep. See more here:
# https://github.com/aptos-labs/aptos-core/pull/12568
processor = { git = "https://github.com/aptos-labs/aptos-indexer-processors-v2.git", rev = "2cf844df30bce0f7dc1729f1c7f6c85e5c25f593", default-features = false }
procfs = "0.14.1"
proc-macro2 = "1.0.38"
project-root = "0.2.2"
prometheus = { version = "0.13.3", default-features = false }
prometheus-http-query = "0.5.2"
prometheus-parse = "0.2.4"
proptest = "1.4.0"
proptest-derive = "0.4.0"
prost = { version = "0.13.4", features = ["no-recursion-limit"] }
prost-types = "0.13.3"
quanta = "0.10.1"
quick_cache = "0.5.1"
quick-junit = "0.5.0"
quote = "1.0.18"
rand = "0.7.3"
rand_core = "0.5.1"
random_word = "0.3.0"
rayon = "1.5.2"
redis = { version = "0.22.3", features = [
    "tokio-comp",
    "script",
    "connection-manager",
] }
redis-test = { version = "0.1.1", features = ["aio"] }
ref-cast = "1.0.6"
regex = "1.9.3"
reqwest = { version = "0.11.11", features = [
    "blocking",
    "cookies",
    "json",
    "multipart",
    "stream",
] }
reqwest-middleware = "0.2.0"
reqwest-retry = "0.2.1"
ring = { version = "0.16.20", features = ["std"] }
ripemd = "0.1.1"
rlimit = "0.10.2"
rocksdb = { version = "0.22.0", features = ["lz4"] }
rsa = { version = "0.9.6" }
rstack-self = { version = "0.3.0", features = ["dw"], default-features = false }
rstest = "0.15.0"
rusty-fork = "0.3.0"
rustversion = "1.0.14"
scopeguard = "1.2.0"
sha2 = "0.9.3"
sha256 = "1.4.0"
sha2_0_10_6 = { package = "sha2", version = "0.10.6" }
sha3 = "0.9.1"
shell-words = "1.0.0"
siphasher = "0.3.10"
serde = { version = "1.0.193", features = ["derive", "rc"] }
serde-big-array = "0.5.1"
serde_bytes = "0.11.6"
serde_json = { version = "1.0.81", features = [
    "preserve_order",
    "arbitrary_precision",
] } # Note: arbitrary_precision is required to parse u256 in JSON
serde_repr = "0.1"
serde_merge = "0.1.3"
serde-name = "0.1.1"
serde-generate = { git = "https://github.com/aptos-labs/serde-reflection", rev = "73b6bbf748334b71ff6d7d09d06a29e3062ca075" }
serde-reflection = { git = "https://github.com/aptos-labs/serde-reflection", rev = "73b6bbf748334b71ff6d7d09d06a29e3062ca075" }
serde_with = "3.4.0"
serde_yaml = "0.8.24"
server-framework = { git = "https://github.com/aptos-labs/aptos-indexer-processors.git", rev = "bf4dd89677e6929ef21f898a7a4176514e606ebd" }
set_env = "1.3.4"
shadow-rs = "0.16.2"
simplelog = "0.9.0"
smallbitvec = "2.5.1"
smallvec = "1.8.0"
static_assertions = "1.1.0"
status-line = "0.2.0"
strum = "0.24.1"
strum_macros = "0.24.2"
sugars = "3.0.1"
syn = { version = "1.0.92", features = ["derive", "extra-traits"] }
sysinfo = "0.28.4"
tar = "0.4.40"
tempfile = "3.3.0"
tera = "1.16.0"
termcolor = "1.1.2"
test-case = "3.1.0"
textwrap = "0.15.0"
thiserror = "1.0.37"
threadpool = "1.8.1"
thread_local = "1.1.7"
tiny-bip39 = "0.8.2"
tiny-keccak = { version = "2.0.2", features = ["keccak", "sha3"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["json", "env-filter"] }
trybuild = "1.0.80"
try_match = "0.4.2"
tokio = { version = "1.35.1", features = ["full"] }
tokio-io-timeout = "1.2.0"
tokio-retry = "0.3.0"
tokio-scoped = { version = "0.2.0" }
tokio-stream = { version = "0.1.14", features = ["fs"] }
tokio-test = "0.4.1"
tokio-util = { version = "0.7.2", features = ["compat", "codec"] }
toml = "0.7.4"
tonic = { version = "0.12.3", features = [
    "tls-roots",
    "transport",
    "prost",
    "gzip",
    "codegen",
    "zstd",
] }
tonic-reflection = "0.12.3"
topological-sort = "0.2.2"
triomphe = "0.1.9"
tui = "0.19.0"
typed-arena = "2.0.2"
typenum = "1.17.0"
uint = "0.9.4"
ureq = { version = "1.5.4", features = [
    "json",
    "native-tls",
], default-features = false }
url = { version = "2.4.0", features = ["serde"] }
uuid = { version = "1.0.0", features = ["v4", "serde"] }
variant_count = "1.1.0"
walkdir = "2.3.3"
warp = { version = "0.3.5", features = ["tls"] }
warp-reverse-proxy = "1.0.0"
wasm-bindgen = "0.2.95"
wasm-bindgen-futures = "0.4.42"
which = "4.2.5"
whoami = "1.5.0"
x25519-dalek = "1.2.0"
z3tracer = "0.8.0"

# MOVE DEPENDENCIES
move-abigen = { path = "third_party/move/move-prover/move-abigen" }
move-binary-format = { path = "third_party/move/move-binary-format" }
move-borrow-graph = { path = "third_party/move/move-borrow-graph" }
move-bytecode-source-map = { path = "third_party/move/move-ir-compiler/move-bytecode-source-map" }
move-bytecode-spec = { path = "third_party/move/move-bytecode-spec" }
move-bytecode-verifier = { path = "third_party/move/move-bytecode-verifier" }
move-bytecode-verifier-invalid-mutations = { path = "third_party/move/move-bytecode-verifier/invalid-mutations" }
move-bytecode-viewer = { path = "third_party/move/tools/move-bytecode-viewer" }
move-bytecode-utils = { path = "third_party/move/tools/move-bytecode-utils" }
move-cli = { path = "third_party/move/tools/move-cli" }
move-command-line-common = { path = "third_party/move/move-command-line-common" }
move-coverage = { path = "third_party/move/tools/move-coverage" }
legacy-move-compiler = { path = "third_party/move/move-compiler-v2/legacy-move-compiler" }
move-compiler-v2 = { path = "third_party/move/move-compiler-v2" }
move-core-types = { path = "third_party/move/move-core/types" }
move-decompiler = { path = "third_party/move/tools/move-decompiler" }
move-docgen = { path = "third_party/move/move-prover/move-docgen" }
move-disassembler = { path = "third_party/move/tools/move-disassembler" }
move-errmapgen = { path = "third_party/move/move-prover/move-errmapgen" }
move-ir-types = { path = "third_party/move/move-ir/types" }
move-ir-compiler = { path = "third_party/move/move-ir-compiler" }
move-ir-to-bytecode = { path = "third_party/move/move-ir-compiler/move-ir-to-bytecode" }
move-linter = { path = "third_party/move/tools/move-linter" }
move-model = { path = "third_party/move/move-model" }
move-package = { path = "third_party/move/tools/move-package" }
move-prover = { path = "third_party/move/move-prover" }
move-prover-boogie-backend = { path = "third_party/move/move-prover/boogie-backend" }
move-prover-bytecode-pipeline = { path = "third_party/move/move-prover/bytecode-pipeline" }
move-prover-test-utils = { path = "third_party/move/move-prover/test-utils" }
move-prover-lab = { path = "third_party/move/move-prover/lab" }
aptos-move-stdlib = { path = "aptos-move/framework/move-stdlib" }
aptos-table-natives = { path = "aptos-move/framework/table-natives" }
move-resource-viewer = { path = "third_party/move/tools/move-resource-viewer" }
move-stackless-bytecode = { path = "third_party/move/move-model/bytecode" }
move-stackless-bytecode-test-utils = { path = "third_party/move/move-model/bytecode-test-utils" }
move-symbol-pool = { path = "third_party/move/move-symbol-pool" }
move-table-extension = { path = "third_party/move/extensions/move-table-extension" }
move-transactional-test-runner = { path = "third_party/move/testing-infra/transactional-test-runner" }
move-unit-test = { path = "third_party/move/tools/move-unit-test", features = [
    "table-extension",
] }
move-vm-metrics = { path = "third_party/move/move-vm/metrics" }
move-vm-runtime = { path = "third_party/move/move-vm/runtime" }
move-vm-test-utils = { path = "third_party/move/move-vm/test-utils", features = [
    "table-extension",
] }
move-vm-types = { path = "third_party/move/move-vm/types" }

[profile.release]
debug = true
overflow-checks = true

# The performance build is not currently recommended
# for production deployments. It has not been widely tested.
[profile.performance]
inherits = "release"
opt-level = 3
debug = true
overflow-checks = true
lto = "thin"
codegen-units = 1

[profile.cli]
inherits = "release"
debug = false
opt-level = "z"
lto = "thin"
strip = true
codegen-units = 1

[profile.ci]
inherits = "release"
debug = "line-tables-only"
overflow-checks = true
debug-assertions = true

[profile.bench]
debug = true

[patch.crates-io]
serde-reflection = { git = "https://github.com/aptos-labs/serde-reflection", rev = "73b6bbf748334b71ff6d7d09d06a29e3062ca075" }
merlin = { git = "https://github.com/aptos-labs/merlin" }
x25519-dalek = { git = "https://github.com/aptos-labs/x25519-dalek", rev = "b9cdbaf36bf2a83438d9f660e5a708c82ed60d8e" }
futures = { git = "https://github.com/aptos-labs/futures-rs", branch = "backport" }
futures-channel = { git = "https://github.com/aptos-labs/futures-rs", branch = "backport" }
futures-executor = { git = "https://github.com/aptos-labs/futures-rs", branch = "backport" }
futures-core = { git = "https://github.com/aptos-labs/futures-rs", branch = "backport" }
futures-util = { git = "https://github.com/aptos-labs/futures-rs", branch = "backport" }
futures-sink = { git = "https://github.com/aptos-labs/futures-rs", branch = "backport" }
futures-io = { git = "https://github.com/aptos-labs/futures-rs", branch = "backport" }
futures-task = { git = "https://github.com/aptos-labs/futures-rs", branch = "backport" }
futures-macro = { git = "https://github.com/aptos-labs/futures-rs", branch = "backport" }
